--- a/package.json
+++ b/package.json
@@ -44,12 +44,13 @@
     "@fullcalendar/react": "^5.6.0",
     "@fullcalendar/timegrid": "^5.6.0",
     "@fullcalendar/timeline": "^5.6.0",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/data-grid": "^4.0.0-alpha.31",
+    "@material-ui/core": "^4.12.1",
+    "@material-ui/data-grid": "^4.0.0-alpha.33",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/pickers": "^3.3.10",
     "@material-ui/styles": "^4.11.4",
+    "@material-ui/system": "^4.12.1",
     "@reduxjs/toolkit": "^1.6.0",
     "@sentry/react": "^6.3.6",
     "@sentry/tracing": "^6.3.6",
