build: 修改项目名称

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "com.example.app",
-	"appName": "yonyou-dashborad",
+	"appName": "dashboard",
 	"webDir": "build",
 	"bundledWebRuntime": false
 }
