--- a/ios/App/App/capacitor.config.json
+++ b/ios/App/App/capacitor.config.json
@@ -1,6 +1,6 @@
 {
 	"appId": "com.example.app",
-	"appName": "yonyou-dashborad",
+	"appName": "dashboard",
 	"webDir": "build",
 	"bundledWebRuntime": false
 }
