--- a/package.json
+++ b/package.json
@@ -63,8 +63,10 @@
     "@capacitor/storage": "^1.2.0",
     "@capacitor/text-zoom": "^1.0.3",
     "@capacitor/toast": "^1.0.3",
-    "@date-io/core": "^1.3.13",
-    "@date-io/date-fns": "^1.3.13",
+    "@date-io/core": "^2.11.0",
+    "@date-io/date-fns": "^2.11.0",
+    "@emotion/react": "^11.4.1",
+    "@emotion/styled": "^11.3.0",
     "@fontsource/noto-sans": "^4.5.0",
     "@fontsource/noto-sans-sc": "^4.5.0",
     "@fontsource/roboto": "^4.5.0",
@@ -79,13 +81,13 @@
     "@fullcalendar/react": "^5.9.0",
     "@fullcalendar/timegrid": "^5.9.0",
     "@fullcalendar/timeline": "^5.9.0",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@material-ui/pickers": "^3.3.10",
-    "@material-ui/styles": "^4.11.4",
-    "@material-ui/system": "^4.12.1",
-    "@mui/x-data-grid": "^4.0.1",
+    "@mui/icons-material": "^5.0.3",
+    "@mui/lab": "^5.0.0-alpha.50",
+    "@mui/material": "^5.0.3",
+    "@mui/styles": "^5.0.1",
+    "@mui/system": "^5.0.3",
+    "@mui/utils": "^5.0.1",
+    "@mui/x-data-grid": "^5.0.0-beta.3",
     "@reduxjs/toolkit": "^1.6.2",
     "@sentry/react": "^6.13.2",
     "@sentry/tracing": "^6.13.2",
@@ -108,10 +110,10 @@
     "lodash": "^4.17.21",
     "lottie-web": "^5.7.13",
     "material-table": "^1.69.3",
-    "material-ui-confirm": "^2.1.3",
+    "material-ui-confirm": "^3.0.1",
     "mathjs": "^9.5.0",
     "mdi-material-ui": "^6.22.1",
-    "notistack": "^1.0.10",
+    "notistack": "^2.0.2",
     "nzh": "^1.0.5",
     "print-js": "^1.6.0",
     "prismjs": "^1.25.0",
@@ -186,11 +188,11 @@
     "babel-jest": "^26.6.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-date-fns": "^2.0.0",
+    "babel-plugin-direct-import": "^0.9.2",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-plugin-prismjs": "^2.1.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
-    "babel-plugin-transform-imports": "^2.0.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "babel-preset-react-app": "^10.0.0",
     "bfj": "^7.0.2",
