--- a/package.json
+++ b/package.json
@@ -37,84 +37,83 @@
     "analyze": "node scripts/build.js --report"
   },
   "dependencies": {
-    "@capacitor/action-sheet": "^1.0.3",
-    "@capacitor/android": "^3.2.4",
-    "@capacitor/app": "^1.0.3",
-    "@capacitor/app-launcher": "^1.0.4",
-    "@capacitor/browser": "^1.0.3",
-    "@capacitor/camera": "^1.1.0",
-    "@capacitor/clipboard": "^1.0.3",
-    "@capacitor/core": "^3.2.4",
-    "@capacitor/device": "^1.0.3",
-    "@capacitor/dialog": "^1.0.3",
-    "@capacitor/filesystem": "^1.0.3",
-    "@capacitor/geolocation": "^1.1.0",
-    "@capacitor/haptics": "^1.1.0",
-    "@capacitor/ios": "^3.2.4",
-    "@capacitor/keyboard": "^1.1.0",
-    "@capacitor/local-notifications": "^1.0.6",
-    "@capacitor/motion": "^1.0.2",
-    "@capacitor/network": "^1.0.3",
-    "@capacitor/push-notifications": "^1.0.4",
-    "@capacitor/screen-reader": "^1.0.3",
-    "@capacitor/share": "^1.0.4",
-    "@capacitor/splash-screen": "^1.1.3",
-    "@capacitor/status-bar": "^1.0.3",
-    "@capacitor/storage": "^1.2.0",
-    "@capacitor/text-zoom": "^1.0.3",
-    "@capacitor/toast": "^1.0.3",
+    "@capacitor/action-sheet": "^1.0.6",
+    "@capacitor/android": "^3.3.2",
+    "@capacitor/app": "^1.0.6",
+    "@capacitor/app-launcher": "^1.0.7",
+    "@capacitor/browser": "^1.0.6",
+    "@capacitor/camera": "^1.2.1",
+    "@capacitor/clipboard": "^1.0.6",
+    "@capacitor/core": "^3.3.2",
+    "@capacitor/device": "^1.1.0",
+    "@capacitor/dialog": "^1.0.6",
+    "@capacitor/filesystem": "^1.0.6",
+    "@capacitor/geolocation": "^1.2.0",
+    "@capacitor/haptics": "^1.1.3",
+    "@capacitor/ios": "^3.3.2",
+    "@capacitor/keyboard": "^1.1.3",
+    "@capacitor/local-notifications": "^1.0.9",
+    "@capacitor/motion": "^1.0.4",
+    "@capacitor/network": "^1.0.6",
+    "@capacitor/push-notifications": "^1.0.7",
+    "@capacitor/screen-reader": "^1.0.6",
+    "@capacitor/share": "^1.0.7",
+    "@capacitor/splash-screen": "^1.1.6",
+    "@capacitor/status-bar": "^1.0.6",
+    "@capacitor/storage": "^1.2.3",
+    "@capacitor/text-zoom": "^1.0.6",
+    "@capacitor/toast": "^1.0.6",
     "@date-io/core": "^2.11.0",
     "@date-io/date-fns": "^2.11.0",
-    "@emotion/react": "^11.4.1",
-    "@emotion/styled": "^11.3.0",
-    "@fontsource/noto-sans": "^4.5.0",
-    "@fontsource/noto-sans-sc": "^4.5.0",
-    "@fontsource/roboto": "^4.5.0",
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@fontsource/noto-sans": "^4.5.1",
+    "@fontsource/noto-sans-sc": "^4.5.2",
+    "@fontsource/roboto": "^4.5.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.15",
-    "@fullcalendar/core": "^5.9.0",
-    "@fullcalendar/daygrid": "^5.9.0",
-    "@fullcalendar/interaction": "^5.9.0",
-    "@fullcalendar/list": "^5.9.0",
-    "@fullcalendar/react": "^5.9.0",
-    "@fullcalendar/timegrid": "^5.9.0",
-    "@fullcalendar/timeline": "^5.9.0",
-    "@mui/icons-material": "^5.0.3",
-    "@mui/lab": "^5.0.0-alpha.50",
-    "@mui/material": "^5.0.3",
-    "@mui/styles": "^5.0.1",
-    "@mui/system": "^5.0.3",
-    "@mui/utils": "^5.0.1",
-    "@mui/x-data-grid": "^5.0.0-beta.3",
+    "@fortawesome/react-fontawesome": "^0.1.16",
+    "@fullcalendar/core": "^5.10.1",
+    "@fullcalendar/daygrid": "^5.10.1",
+    "@fullcalendar/interaction": "^5.10.1",
+    "@fullcalendar/list": "^5.10.1",
+    "@fullcalendar/react": "^5.10.1",
+    "@fullcalendar/timegrid": "^5.10.1",
+    "@fullcalendar/timeline": "^5.10.1",
+    "@mui/icons-material": "^5.1.1",
+    "@mui/lab": "^5.0.0-alpha.55",
+    "@mui/material": "^5.1.1",
+    "@mui/styles": "^5.1.1",
+    "@mui/system": "^5.1.1",
+    "@mui/utils": "^5.1.1",
+    "@mui/x-data-grid": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.2",
-    "@sentry/react": "^6.13.2",
-    "@sentry/tracing": "^6.13.2",
+    "@sentry/react": "^6.15.0",
+    "@sentry/tracing": "^6.15.0",
     "accounting": "^0.4.1",
-    "apexcharts": "^3.28.3",
-    "async-es": "^3.2.1",
-    "autosuggest-highlight": "^3.1.1",
-    "axios": "^0.21.4",
+    "apexcharts": "^3.30.0",
+    "async-es": "^3.2.2",
+    "autosuggest-highlight": "^3.2.0",
+    "axios": "^0.24.0",
     "axios-mock-adapter": "^1.20.0",
     "chinese-idcard-checker": "^2.0.0",
     "clipboard": "^2.0.8",
     "clsx": "^1.1.1",
     "crypto-js": "^4.1.1",
-    "date-fns": "^2.25.0",
+    "date-fns": "^2.26.0",
     "draft-js": "^0.11.7",
     "immer": "^9.0.6",
     "js-cookie": "^3.0.1",
     "js-file-download": "^0.4.12",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "logrocket": "^2.1.1",
-    "lottie-web": "^5.7.13",
-    "material-table": "^1.69.3",
-    "material-ui-confirm": "^3.0.1",
-    "mathjs": "^9.5.0",
-    "mdi-material-ui": "^6.22.1",
-    "notistack": "^2.0.2",
+    "logrocket": "^2.1.2",
+    "lottie-web": "^5.8.1",
+    "material-ui-confirm": "^3.0.2",
+    "mathjs": "^9.5.2",
+    "mdi-material-ui": "^6.23.0",
+    "notistack": "^2.0.3",
     "nzh": "^1.0.5",
     "print-js": "^1.6.0",
     "prismjs": "^1.25.0",
@@ -124,23 +123,22 @@
     "react-apexcharts": "^1.3.9",
     "react-app-polyfill": "^2.0.0",
     "react-beautiful-dnd": "^13.1.0",
-    "react-big-calendar": "^0.35.0",
+    "react-big-calendar": "^0.38.1",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-dropzone": "^11.4.2",
     "react-helmet": "^6.1.0",
     "react-image-file-resizer": "^0.4.7",
     "react-infinite-scroll-component": "^6.1.0",
-    "react-markdown": "^7.0.1",
-    "react-modal-image": "^2.5.0",
-    "react-number-format": "^4.7.3",
+    "react-markdown": "^7.1.0",
+    "react-number-format": "^4.8.0",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-redux": "^7.2.5",
+    "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.3.0",
     "react-window": "^1.8.6",
-    "redux": "^4.1.1",
+    "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "tai-password-strength": "^1.1.3",
     "uuid": "^8.3.2",
@@ -160,10 +158,10 @@
     "workbox-streams": "^5.1.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.5",
-    "@capacitor/cli": "^3.2.4",
-    "@commitlint/cli": "^13.2.0",
-    "@commitlint/config-angular": "^13.2.0",
+    "@babel/core": "^7.16.0",
+    "@capacitor/cli": "^3.3.2",
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-angular": "^15.0.0",
     "@lhci/cli": "^0.8.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@svgr/webpack": "^5.5.0",
@@ -172,24 +170,24 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/accounting": "^0.4.2",
     "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.175",
-    "@types/node": "^12.20.27",
+    "@types/lodash": "^4.14.177",
+    "@types/node": "^16.11.9",
     "@types/qs": "^6.9.7",
-    "@types/react": "^17.0.27",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-helmet": "^6.1.3",
-    "@types/react-redux": "^7.1.18",
-    "@types/react-router": "^5.1.16",
+    "@types/react": "^17.0.36",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.4",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router": "^5.1.17",
     "@types/react-router-config": "^5.0.3",
-    "@types/react-router-dom": "^5.3.0",
+    "@types/react-router-dom": "^5.3.2",
     "@types/webappsec-credential-management": "^0.6.2",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "@typescript-eslint/parser": "^4.33.0",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.6.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-date-fns": "^2.0.0",
-    "babel-plugin-direct-import": "^0.9.2",
+    "babel-plugin-direct-import": "^1.0.0",
     "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-named-asset-import": "^0.3.7",
     "babel-plugin-prismjs": "^2.1.0",
@@ -200,29 +198,25 @@
     "cache-loader": "^4.1.0",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
-    "chromedriver": "^94.0.0",
+    "chromedriver": "^96.0.0",
     "compression-webpack-plugin": "^6.1.1",
     "conventional-changelog-cli": "^2.1.1",
     "css-loader": "^4.3.0",
     "dotenv": "^8.6.0",
     "dotenv-expand": "^5.1.0",
-    "electron": "^15.1.1",
-    "electron-builder": "^22.11.7",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
+    "electron": "^16.0.1",
+    "electron-builder": "^22.14.5",
     "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
-    "eslint-config-react-app": "^6.0.0",
+    "eslint-config-airbnb": "^19.0.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^16.0.0",
     "eslint-import-resolver-alias": "^1.1.2",
-    "eslint-plugin-flowtype": "^5.10.0",
-    "eslint-plugin-import": "^2.24.2",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^24.5.2",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-mui-unused-classes": "^1.0.3",
-    "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-testing-library": "^3.10.2",
     "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "^6.2.0",
@@ -241,8 +235,7 @@
     "lint-staged": "^11.2.0",
     "lodash-webpack-plugin": "^0.11.6",
     "mini-css-extract-plugin": "^0.11.3",
-    "moment-locales-webpack-plugin": "^1.2.0",
-    "nightwatch": "^1.7.11",
+    "nightwatch": "^1.7.12",
     "optimize-css-assets-webpack-plugin": "^5.0.8",
     "pnp-webpack-plugin": "^1.7.0",
     "postcss-flexbugs-fixes": "^4.2.1",
@@ -255,13 +248,13 @@
     "purgecss": "^4.0.3",
     "purgecss-webpack-plugin": "^4.0.3",
     "react-dev-utils": "^11.0.4",
-    "react-docgen-typescript": "^2.1.0",
+    "react-docgen-typescript": "^2.1.1",
     "react-refresh": "^0.8.3",
     "react-styleguidist": "^11.1.6",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^3.1.4",
-    "sass": "^1.42.1",
-    "sass-loader": "^8.0.2",
+    "sass": "^1.43.4",
+    "sass-loader": "^10.2.0",
     "semver": "^7.3.5",
     "style-loader": "^1.3.0",
     "stylelint": "^13.13.1",
@@ -280,7 +273,8 @@
     "workbox-webpack-plugin": "^5.1.4"
   },
   "engines": {
-    "node": "> 12.13.0"
+    "node": ">= 16.13.0",
+    "npm": ">= 7.0.0"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
