--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,8 @@ selenium-debug.log
 chromedriver.log
 geckodriver.log
 
+.lighthouseci
+
 # production
 /build
 /electron/build/
@@ -25,6 +27,8 @@ geckodriver.log
 .env.test.local
 .env.production.local
 
+tsconfig.tsbuildinfo
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
@@ -37,5 +41,3 @@ yarn-error.log*
 *.njsproj
 *.sln
 *.sw?
-
-.lighthouseci
