--- a/package.json
+++ b/package.json
@@ -121,7 +121,7 @@
     "qs": "^6.10.1",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
-    "react-app-polyfill": "^2.0.0",
+    "react-app-polyfill": "^3.0.0",
     "react-beautiful-dnd": "^13.1.0",
     "react-big-calendar": "^0.38.1",
     "react-dom": "^17.0.2",
@@ -140,133 +140,136 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "tai-password-strength": "^1.1.3",
+    "tailwindcss": "^3.0.7",
     "uuid": "^8.3.2",
     "validate.js": "^0.13.1",
-    "web-vitals": "^1.1.2",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "web-vitals": "^2.1.2",
+    "workbox-background-sync": "^6.4.2",
+    "workbox-broadcast-update": "^6.4.2",
+    "workbox-cacheable-response": "^6.4.2",
+    "workbox-core": "^6.4.2",
+    "workbox-expiration": "^6.4.2",
+    "workbox-google-analytics": "^6.4.2",
+    "workbox-navigation-preload": "^6.4.2",
+    "workbox-precaching": "^6.4.2",
+    "workbox-range-requests": "^6.4.2",
+    "workbox-routing": "^6.4.2",
+    "workbox-strategies": "^6.4.2",
+    "workbox-streams": "^6.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
-    "@capacitor/cli": "^3.3.2",
+    "@capacitor/cli": "^3.3.3",
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-angular": "^15.0.0",
     "@lhci/cli": "^0.8.2",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
+    "@stylelint/postcss-css-in-js": "^0.37.2",
     "@svgr/webpack": "^5.5.0",
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
+    "@testing-library/jest-dom": "^5.16.1",
+    "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/accounting": "^0.4.2",
-    "@types/jest": "^26.0.24",
-    "@types/lodash": "^4.14.177",
+    "@types/jest": "^27.0.3",
+    "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.9",
     "@types/qs": "^6.9.7",
-    "@types/react": "^17.0.36",
+    "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.11",
     "@types/react-helmet": "^6.1.4",
     "@types/react-redux": "^7.1.20",
     "@types/webappsec-credential-management": "^0.6.2",
-    "@typescript-eslint/eslint-plugin": "^5.4.0",
-    "@typescript-eslint/parser": "^5.4.0",
+    "@typescript-eslint/eslint-plugin": "^5.8.0",
+    "@typescript-eslint/parser": "^5.8.0",
+    "@vue/preload-webpack-plugin": "^2.0.0",
     "babel-eslint": "^10.1.0",
-    "babel-jest": "^26.6.0",
-    "babel-loader": "^8.2.2",
+    "babel-jest": "^27.4.2",
+    "babel-loader": "^8.2.3",
     "babel-plugin-date-fns": "^2.0.0",
     "babel-plugin-direct-import": "^1.0.0",
     "babel-plugin-lodash": "^3.3.4",
-    "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-plugin-named-asset-import": "^0.3.8",
     "babel-plugin-prismjs": "^2.1.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "babel-preset-react-app": "^10.0.0",
+    "babel-preset-react-app": "^10.0.1",
     "bfj": "^7.0.2",
-    "cache-loader": "^4.1.0",
-    "camelcase": "^6.1.0",
+    "browserslist": "^4.18.1",
+    "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "chromedriver": "^96.0.0",
-    "compression-webpack-plugin": "^6.1.1",
+    "compression-webpack-plugin": "^9.2.0",
     "conventional-changelog-cli": "^2.1.1",
-    "css-loader": "^4.3.0",
-    "dotenv": "^8.6.0",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.2.0",
+    "dotenv": "^10.0.0",
     "dotenv-expand": "^5.1.0",
     "electron": "^16.0.1",
     "electron-builder": "^22.14.5",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^19.0.0",
+    "eslint": "^8.3.0",
+    "eslint-config-airbnb": "^19.0.2",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-config-airbnb-typescript": "^16.0.0",
+    "eslint-config-airbnb-typescript": "^16.1.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^24.5.2",
+    "eslint-plugin-jest": "^25.3.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
-    "eslint-plugin-mui-unused-classes": "^1.0.3",
     "eslint-plugin-react": "^7.27.1",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "eslint-plugin-testing-library": "^3.10.2",
-    "eslint-webpack-plugin": "^2.5.4",
+    "eslint-plugin-testing-library": "^5.0.1",
+    "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "fs-extra": "^9.1.0",
+    "fs-extra": "^10.0.0",
     "geckodriver": "^2.0.4",
     "glob-all": "^3.2.1",
-    "html-webpack-plugin": "^4.5.2",
+    "html-webpack-plugin": "^5.5.0",
     "http-proxy-middleware": "^2.0.1",
     "husky": "^4.3.8",
     "identity-obj-proxy": "^3.0.0",
-    "imagemin-webpack-plugin": "^2.4.2",
-    "jest": "^26.6.3",
-    "jest-circus": "^26.6.3",
-    "jest-resolve": "^26.6.2",
-    "jest-watch-typeahead": "^0.6.5",
+    "image-minimizer-webpack-plugin": "^3.1.2",
+    "imagemin": "^8.0.1",
+    "imagemin-gifsicle": "^7.0.0",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^10.0.1",
+    "jest": "^27.4.3",
+    "jest-resolve": "^27.4.2",
+    "jest-watch-typeahead": "^1.0.0",
     "lint-staged": "^11.2.0",
     "lodash-webpack-plugin": "^0.11.6",
-    "mini-css-extract-plugin": "^0.11.3",
+    "mini-css-extract-plugin": "^2.4.5",
     "nightwatch": "^1.7.12",
-    "optimize-css-assets-webpack-plugin": "^5.0.8",
-    "pnp-webpack-plugin": "^1.7.0",
-    "postcss-flexbugs-fixes": "^4.2.1",
-    "postcss-loader": "^3.0.0",
-    "postcss-normalize": "^8.0.1",
-    "postcss-preset-env": "^6.7.0",
-    "postcss-safe-parser": "^5.0.2",
-    "preload-webpack-plugin": "^3.0.0-beta.4",
-    "prompts": "^2.4.1",
-    "purgecss": "^4.0.3",
-    "purgecss-webpack-plugin": "^4.0.3",
-    "react-dev-utils": "^11.0.4",
+    "postcss": "^8.4.4",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-normalize": "^10.0.1",
+    "postcss-preset-env": "^7.0.1",
+    "prompts": "^2.4.2",
+    "purgecss": "^4.1.3",
+    "purgecss-webpack-plugin": "^4.1.3",
+    "react-dev-utils": "^12.0.0",
     "react-docgen-typescript": "^2.1.1",
-    "react-refresh": "^0.8.3",
+    "react-refresh": "^0.11.0",
     "react-styleguidist": "^11.1.6",
     "resolve": "^1.20.0",
-    "resolve-url-loader": "^3.1.4",
-    "sass": "^1.43.4",
-    "sass-loader": "^10.2.0",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.3.0",
     "semver": "^7.3.5",
-    "style-loader": "^1.3.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-twbs-bootstrap": "^2.2.4",
-    "stylelint-webpack-plugin": "^2.2.2",
-    "terser-webpack-plugin": "^4.2.3",
+    "source-map-loader": "^3.0.0",
+    "style-loader": "^3.3.1",
+    "stylelint": "^14.1.0",
+    "stylelint-config-twbs-bootstrap": "^3.0.0",
+    "stylelint-webpack-plugin": "^3.1.0",
+    "terser-webpack-plugin": "^5.2.5",
     "thread-loader": "^3.0.4",
-    "ts-pnp": "^1.2.0",
-    "typescript": "^4.4.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^4.46.0",
-    "webpack-bundle-analyzer": "^4.4.1",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-manifest-plugin": "^2.2.0",
-    "webpack-subresource-integrity": "^1.5.2",
-    "workbox-webpack-plugin": "^5.1.4"
+    "typescript": "^4.5.4",
+    "webpack": "^5.64.4",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-dev-server": "^4.6.0",
+    "webpack-manifest-plugin": "^4.0.2",
+    "webpack-subresource-integrity": "^5.0.0",
+    "workbox-webpack-plugin": "^6.4.2"
   },
   "engines": {
     "node": ">= 16.13.0",
