--- a/package.json
+++ b/package.json
@@ -126,7 +126,7 @@
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-dropzone": "^11.4.2",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.2.2",
     "react-image-file-resizer": "^0.4.7",
     "react-infinite-scroll-component": "^6.1.0",
     "react-markdown": "^8.0.0",
